2017-08-25 Werner S Freund
	* Fixed looping newline when nesting many measureLoopTime and progressbars

2017-08-24 Werner S Freund
	* Added straverse and improved select method

2017-08-02 Werner S Freund
	* Fixed globing to use it only if * is found at file name

2017-08-01 Werner S Freund
	* LoopingBounds can be used directly in loops via iter method.

2017-07-31 Werner S Freund
	* expandFolders now deal with path globing 

2017-07-28 Werner S Freund
	* Added EnumStringification methods to retrieve enumeration string/ints
	* Added protection when loading wrong file types
	* Tagging RingerCore-01-00-09

2017-04-30 Werner S Freund
	* Added beamer ignore missing flag.
	* Changed beamer outline format.

2017-04-27 Werner S Freund
	* Fix to handle new numpy version which changed the way the
	fortran_contiguous and c_contiguous flags are set on 2D arrays.
	* Tagging RingerCore-01-00-08.

2017-01-24 Werner S Freund
	* Workaround panda submission issue that adds extra excludeFiles without
	checking if appending a comma is needed.

2017-01-22 Werner S Freund
	* Version also working on the grid.
	* Tagging RingerCore-01-00-07.

2017-01-22 Werner S Freund
	* Plenty of bug fixes, now tuning operational at loboc and will be tested
	on the grid.
	* Tagging RingerCore-01-00-06.

2017-01-21 Werner S Freund
	* Separated grid from no_color, allowing to run on grid mode with color
	* Bug fix on LimitedTypeList, which was not adding __init__ method
	due to object/list __init__ methods.
	* Tagging RingerCore-01-00-05.

2017-01-20 Werner S Freund
	* Added tex/beamer api.
	* Silenced boost dirname complaint when no boost is available in the
	LD_LIBRARY_PATH.
	* Improved LimitedTypeList to check if base classes are list subclasses
	as well as if they declare _acceptedTypes (where the first base
	_acceptedTypes will be used by default).
	* Only add __init__ method for LimitedTypeList when it does not
	inherit from a LimitedTypeList.