@@ -11,12 +11,12 @@ if expand('%') == '' && !&modified && line('$') <= 1 && getline(1) == ''
 endif
 set shortmess=aoO
 badd +1 python/__init__.py
-badd +1 python/Configure.py
+badd +6 python/Configure.py
 badd +1 python/FileIO.py
 badd +1 python/LimitedTypeList.py
 badd +1 python/Logger.py
 badd +1 python/LoopingBounds.py
-badd +2 python/npConstants.py
+badd +1 python/npConstants.py
 badd +1 python/OldLogger.py
 badd +1 python/RawDictStreamable.py
 badd +1 python/RucioTools.py
@@ -29,9 +29,9 @@ badd +1 python/parsers/__init__.py
 badd +1 python/parsers/__py_argparse.py
 badd +1 python/parsers/ClusterManager.py
 badd +1 python/parsers/Grid.py
-badd +2 python/parsers/LocalCluster.py
+badd +1 python/parsers/LocalCluster.py
 badd +1 python/parsers/Logger.py
-badd +1 python/parsers/ParsingUtils.py
+badd +30 python/parsers/ParsingUtils.py
 badd +1 RingerCore/defines.h
 badd +1 RingerCore/MsgStream.h
 badd +1 RingerCore/StoreGate.h
@@ -47,38 +47,43 @@ badd +1 cmt/check_install_setup_tools.sh
 badd +1 cmt/gcc_python_compiler_path.sh
 badd +1 cmt/Makefile.RootCore
 badd +1 cmt/new_env_file.sh
-badd +0 cmt/precompile.RootCore
+badd +1 cmt/precompile.RootCore
+badd +1 python/Git.py
+badd +48 python/parsers/Git.py
 argglobal
 silent! argdel *
-edit python/util.py
+edit python/npConstants.py
 edit python/LoopingBounds.py
 edit python/__init__.py
 edit python/Configure.py
-edit python/FileIO.py
-edit python/RawDictStreamable.py
-edit python/Logger.py
-edit python/StoreGate.py
-edit python/npConstants.py
-edit python/LimitedTypeList.py
-edit python/RucioTools.py
 edit python/OldLogger.py
-edit python/Configure.py
+edit python/RawDictStreamable.py
+edit python/RucioTools.py
+edit python/StoreGate.py
+edit python/util.py
+edit python/Logger.py
+edit python/Git.py
+edit python/LimitedTypeList.py
+edit python/FileIO.py
+let t:CtrlSpaceLabel = 'py'
+edit python/Git.py
 set splitbelow splitright
 set nosplitbelow
 set nosplitright
 wincmd t
 set winheight=1 winwidth=1
 argglobal
-let s:l = 1 - ((0 * winheight(0) + 25) / 50)
+let s:l = 28 - ((27 * winheight(0) + 24) / 49)
 if s:l < 1 | let s:l = 1 | endif
 exe s:l
 normal! zt
-1
-normal! 0
+28
+normal! 049|
 tabedit python/tex/TexAPI.py
 edit python/tex/__init__.py
 edit python/tex/BeamerAPI.py
 edit python/tex/TexAPI.py
+let t:CtrlSpaceLabel = 'tex'
 edit python/tex/TexAPI.py
 set splitbelow splitright
 set nosplitbelow
@@ -86,37 +91,40 @@ set nosplitright
 wincmd t
 set winheight=1 winwidth=1
 argglobal
-let s:l = 592 - ((18 * winheight(0) + 25) / 50)
+let s:l = 592 - ((18 * winheight(0) + 24) / 49)
 if s:l < 1 | let s:l = 1 | endif
 exe s:l
 normal! zt
 592
 normal! 024|
-tabedit python/parsers/ParsingUtils.py
-edit python/parsers/__py_argparse.py
+tabedit python/parsers/Git.py
+edit python/parsers/ParsingUtils.py
+edit python/parsers/Git.py
 edit python/parsers/ClusterManager.py
 edit python/parsers/Grid.py
 edit python/parsers/LocalCluster.py
 edit python/parsers/__init__.py
-edit python/parsers/ParsingUtils.py
+edit python/parsers/__py_argparse.py
 edit python/parsers/Logger.py
-edit python/parsers/ParsingUtils.py
+let t:CtrlSpaceLabel = 'parsers'
+edit python/parsers/Git.py
 set splitbelow splitright
 set nosplitbelow
 set nosplitright
 wincmd t
 set winheight=1 winwidth=1
 argglobal
-let s:l = 1 - ((0 * winheight(0) + 25) / 50)
+let s:l = 48 - ((47 * winheight(0) + 24) / 49)
 if s:l < 1 | let s:l = 1 | endif
 exe s:l
 normal! zt
-1
-normal! 0
+48
+normal! 03|
 tabedit RingerCore/StoreGate.h
-edit RingerCore/defines.h
 edit RingerCore/MsgStream.h
 edit RingerCore/StoreGate.h
+edit RingerCore/defines.h
+let t:CtrlSpaceLabel = 'h'
 edit RingerCore/StoreGate.h
 set splitbelow splitright
 set nosplitbelow
@@ -124,7 +132,7 @@ set nosplitright
 wincmd t
 set winheight=1 winwidth=1
 argglobal
-let s:l = 1 - ((0 * winheight(0) + 25) / 50)
+let s:l = 1 - ((0 * winheight(0) + 24) / 49)
 if s:l < 1 | let s:l = 1 | endif
 exe s:l
 normal! zt
@@ -133,6 +141,7 @@ normal! 0
 tabedit Root/StoreGate.cxx
 edit Root/MsgStream.cxx
 edit Root/StoreGate.cxx
+let t:CtrlSpaceLabel = 'cxx'
 edit Root/StoreGate.cxx
 set splitbelow splitright
 set nosplitbelow
@@ -140,7 +149,7 @@ set nosplitright
 wincmd t
 set winheight=1 winwidth=1
 argglobal
-let s:l = 1 - ((0 * winheight(0) + 25) / 50)
+let s:l = 1 - ((0 * winheight(0) + 24) / 49)
 if s:l < 1 | let s:l = 1 | endif
 exe s:l
 normal! zt
@@ -149,6 +158,7 @@ normal! 0
 tabedit readme.md
 edit readme.md
 edit Changelog
+let t:CtrlSpaceLabel = 'log_md'
 edit readme.md
 set splitbelow splitright
 set nosplitbelow
@@ -156,7 +166,7 @@ set nosplitright
 wincmd t
 set winheight=1 winwidth=1
 argglobal
-let s:l = 1 - ((0 * winheight(0) + 25) / 50)
+let s:l = 1 - ((0 * winheight(0) + 24) / 49)
 if s:l < 1 | let s:l = 1 | endif
 exe s:l
 normal! zt
@@ -166,12 +176,13 @@ tabedit cmt/precompile.RootCore
 edit cmt/check_install_boost.sh
 edit cmt/check_install_cython.sh
 edit cmt/check_install_numpy.sh
-edit cmt/check_install_scipy.sh
+edit cmt/precompile.RootCore
 edit cmt/check_install_setup_tools.sh
 edit cmt/gcc_python_compiler_path.sh
 edit cmt/Makefile.RootCore
 edit cmt/new_env_file.sh
-edit cmt/precompile.RootCore
+edit cmt/check_install_scipy.sh
+let t:CtrlSpaceLabel = 'cmt'
 edit cmt/precompile.RootCore
 set splitbelow splitright
 set nosplitbelow
@@ -179,7 +190,7 @@ set nosplitright
 wincmd t
 set winheight=1 winwidth=1
 argglobal
-let s:l = 1 - ((0 * winheight(0) + 25) / 50)
+let s:l = 1 - ((0 * winheight(0) + 24) / 49)
 if s:l < 1 | let s:l = 1 | endif
 exe s:l
 normal! zt
